--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <script>
+    // Auto-detect dark mode on first load
+    if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      document.addEventListener('DOMContentLoaded', function() {
+        document.body.classList.add('dark-theme');
+      });
+    }
+  </script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
